# btk-kanka

./: .gitignore  README.md
backend/: .env.example  README.md  docker-compose.yml  pyproject.toml
backend/app/: config.py  db.py  errors.py  main.py  schemas.py
backend/app/ai/: berturk.py  gemini.py  retrieval.py  tools.py  vllm_client.py
backend/app/routes/: cart.py  categories.py  chat.py  compare.py  products.py  qa.py  reviews.py  seller.py
backend/scripts/: aggregate_features.py  build_dataset.py  etl_normalize.py  infer_berturk.py  ingest_chroma.py  ingest_postgres.py  llm_label_qwen.py  train_berturk.py
data-collection/: analyze_raw.py  deep_analysis.py  monitor.py  pilot_urls.txt  scraper-trendyol.py
examples/: README.md  bert_labels.jsonl  chroma_documents.json  product.json  qwen_label_prompt.json  reviews.jsonl
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/cart/: page.tsx
frontend/components/cart/: AINudge.tsx  CartCoupon.tsx  CartItemRow.tsx  CartSummary.tsx  CheckoutSteps.tsx  ComboSuggestions.tsx  DemoToggle.tsx  EmptyCart.tsx
frontend/components/chat/: ChatPanel.tsx  ChatPanelMount.tsx  ChatStateCleaner.tsx  ToolCallLog.tsx
frontend/components/home/: Categories.tsx  CtaBanner.tsx  Hero.tsx  HowItWorks.tsx  ProductsSection.tsx
frontend/lib/: api.ts  chatStream.ts  comboData.ts  format.ts  homeMockData.ts  productMockData.ts  queries.ts  types.ts
frontend/store/: adminStore.ts  cartStore.ts  chatStore.ts
(+14 files in other folders)
