[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kanka-backend"
version = "0.1.0"
description = "Kanka AI alisveris asistani backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.40",
    "alembic>=1.18.4",
    "chromadb>=1.5.9",
    "sentence-transformers>=4.1.0",
    "transformers>=4.51.0",
    "torch>=2.7.0",
    "scikit-learn>=1.6.1",
    "datasets>=3.5.0",
    "google-genai>=2.3.0",
    "openai>=1.82.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "hdbscan>=0.8.40",
    "orjson>=3.10.18",
    "python-dotenv>=1.1.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
